# 2013q1

./: README.md
0. eloadas/SoundStuff/: .project  CMakeLists.txt  README.md  SoundStuff.pro  run-test2-raspi.sh  run.sh
0. eloadas/SoundStuff/SoundStuff.xcodeproj/: project.pbxproj
0. eloadas/SoundStuff/src/: SoundSample.cpp  SoundSample.h  main-1.cpp  types.h
0. előadás/SoundStuff/: .cproject  Makefile  run-test1-raspi.sh  test.sh
0. előadás/SoundStuff/arduino/: cpp_tanfolyam.ino
0. előadás/SoundStuff/src/: main.cpp  morsetext.cpp  morsetext.h
1. eloadas/: Calculator.cpp  Calculator.h  HelloWorld.cpp  Logger.cpp  Logger.h
2. eloadas/: updatescript.sh
2. eloadas/GuiApplication/: GuiApplication.cpp  GuiApplication.h  GuiApplication.pro  GuiApplication.ui  INetworkAdapter.h  LoopbackNetworkAdapter.h  Message.cpp  Message.h  PingnetNetworkAdapater.h  User.cpp  User.h  UserListModel.cpp  main.cpp
2. eloadas/QtProject/: QtProject.pro
2. eloadas/QtProject/GuiApplication/: GuiApplication.h  GuiApplication.pro  LoopbackNetworkAdapter.cpp  LoopbackNetworkAdapter.h  PingnetNetworkAdapater.cpp  User.cpp  UserListModel.cpp  UserListModel.h  main.cpp
2. eloadas/QtProject/QtNet/: QtNet.cpp  QtNet.h  QtNet.pro  qtnet_global.h
2. eloadas/include/: NetInterface.h
2. eloadas/src/RelayServer/: Callback.h  Makefile  Peer.cpp  Peer.h  RelayServer.cpp
2. eloadas/src/boostNet/: BoostNet.cpp  BoostNet.h  CMakeLists.txt  ConsoleApplication.cpp  Makefile
3. eloadas/: CMakeLists.txt
3. eloadas/src/: auto.cpp  lambda.cpp  nullptr.cpp  rangefor.cpp  rvalue.cpp
3. eloadas/src/RelayServer/: CMakeLists.txt  Makefile  RelayServer.cpp  RelayServer.h  main.cpp
3. eloadas/src/boostNet/: BoostNet.cpp  ConsoleApplication.h  User.cpp  User.h  main.cpp
4. eloadas/: CMakeLists.txt
4. eloadas/cucumber/: networktest.sh  reconnect.feature  status.txt
4. eloadas/cucumber/step_definitions/: diconnection.rb
4. eloadas/src/: IFile.h  Options.cpp  Options.h  OptionsFileHandler.cpp  OptionsFileHandler.h  optionsFileHandlerTest.cpp  optionsFixtureTest.cpp  optionsTest.cpp  simpleTest.cpp
8. eloadas/debugExample/: CMakeLists.txt  main.cpp
8. eloadas/staticExample/: CMakeLists.txt  main.cpp
